# NanoVec

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-test.yml
examples/: demo.py
src/nanovec/: __init__.py  exceptions.py  index.py
src/nanovec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
vector_db/: __init__.py  index.py  store.py  utils.py
